--- a/index.html
+++ b/index.html
@@ -266,12 +266,12 @@
                         </div>
                         <div class="item">
                            <img class="img-responsive" src="images/2.jpg" alt="#" />
-                           <h3>New York</h3>
+                           <h3>Hyderabad</h3>
                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in soe suffk even slightly believable. If y be sure there</p>
                         </div>
                         <div class="item">
                            <img class="img-responsive" src="images/3.jpg" alt="#" />
-                           <h3>London</h3>
+                           <h3>Kashmir</h3>
                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in soe suffk even slightly believable. If y be sure there</p>
                         </div>
                         <div class="item">
@@ -323,7 +323,7 @@
                         <p><strong class="Comment"> 06 </strong>  Comment</p>
                         <p><strong class="like">05 </strong>Like</p>
                      </div>
-                     <h3>London Amazing Tour</h3>
+                     <h3> Channei Amazing Tour</h3>
                      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web</p>
                   </div>
                </div>
@@ -338,7 +338,7 @@
                         <p><strong class="Comment"> 06 </strong>  Comment</p>
                         <p><strong class="like">05 </strong>Like</p>
                      </div>
-                     <h3>London Amazing Tour</h3>
+                     <h3>Uttarakhand Amazing Tour</h3>
                      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web</p>
                   </div>
                </div>
@@ -362,8 +362,8 @@
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                      <div class="Follow">
                         <h3>CONTACT US</h3>
-                        <span>123 Second Street Fifth <br>Avenue,<br>
-                        Manhattan, New York<br>
+                        <span>
+                        Ahemdabad, India<br>
                         +91 8290983991</span>
                      </div>
                   </div>
@@ -399,7 +399,7 @@
                </div>
                <div class="copyright">
                   <div class="container">
-                     <p>Copyright 2025 All Right Reserved By <a href="https://html.design/">Cultural TRavels</a></p>
+                     <p>Copyright 2025 All Right Reserved By <a href="https://html.design/">Cultural Travels</a></p>
                   </div>
                </div>
             </div>
